--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>microtones</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
+
+      body, select { font-family: 'Lato', sans-serif; font-size: 18px; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
