--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
 
       body, select { font-family: 'Lato', sans-serif; font-size: 16px; }
+      body { margin: 0; padding: 0; }
     </style>
   </head>
   <body>
