Firefox fixes & misc updates

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>microtones</title>
+    <title>microtonal synth & sequencer</title>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
 
